--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">login_register_app</string>
+    <string name="mapApiKey">AIzaSyASdI1qm9YE0y_aldE2orX06Qy0XmL7T00</string>
 
     <string name="login">Login</string>
     <string name="new_user_register_here">New user? Register here!</string>
@@ -46,5 +47,6 @@
     <string name="email_not_valid">Email is not valid!</string>
     <string name="password_length_error">Password must be at least 6 characters!</string>
     <string name="password_confirm">Confirm password please!</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
