--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -44,6 +44,7 @@
     <string name="your_image">Η εικόνα σού</string>
     <string name="load_from_camera">Από κάμερα</string>
     <string name="load_from_gallery">Από συλλογή</string>
+    <string name="translate">Μετάφραση</string>
 
     <!-- Sights Activity. -->
     <string name="show_all_sights">Προβολή όλων των αξιοθέατων</string>
@@ -59,5 +60,13 @@
     <string name="greek">Ελληνικά</string>
     <string name="german">Γερμανικά</string>
     <string name="spanish">Ισπανικά</string>
+
+    <!-- Translate Activity -->
+    <string name="translate_to">Μετάφραση σε</string>
+    <string-array name="spn_langs">
+        <item>Ελληνικά</item>
+        <item>Γερμανικά</item>
+        <item>Ισπανικά</item>
+    </string-array>
 
 </resources>
