--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="translate_to">Translate to</string>
     
     <string-array name="spn_langs">
+        <item></item>
         <item>Greek</item>
         <item>German</item>
         <item>Spanish</item>
