--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,13 @@
     <string name="password_confirm">Confirm password please!</string>
     <string name="translate">Translate</string>
     <string name="translate_to">Translate to</string>
-    
+    <string name="profile">Profile</string>
+    <string name="date_account_created">Date account created</string>
+    <string name="full_name">Full name</string>
+    <string name="age">Age</string>
+    <string name="country">Country</string>
+    <string name="save">Save</string>
+
     <string-array name="spn_langs">
         <item></item>
         <item>Greek</item>
