--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,8 @@
     <string name="age">Age</string>
     <string name="country">Country</string>
     <string name="save">Save</string>
+    <string name="update_user_profile">Your profile is updated successfully!</string>
+    <string name="text_to_be_recognize">Text to be recognize</string>
 
     <string-array name="spn_langs">
         <item></item>
