--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -49,6 +49,7 @@
 
     <!-- Text Recognition Activity. -->
     <string name="text_to_be_recognize">Κείμενο προς αναγνώριση</string>
+    <string name="detect_text">Ανίχνευση κειμένου</string>
 
     <!-- Sights Activity. -->
     <string name="show_all_sights">Προβολή όλων των αξιοθέατων</string>
