--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="save">Save</string>
     <string name="update_user_profile">Your profile is updated successfully!</string>
     <string name="text_to_be_recognize">Text to be recognize</string>
+    <string name="detect_text">Detect Text</string>
 
     <string-array name="spn_langs">
         <item></item>
