--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="update_user_profile">Your profile is updated successfully!</string>
     <string name="text_to_be_recognize">Text to be recognize</string>
     <string name="detect_text">Detect Text</string>
+    <string name="image_detect_no_txt">Image contains no text</string>
 
     <string-array name="spn_langs">
         <item></item>
