--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -50,6 +50,7 @@
     <!-- Text Recognition Activity. -->
     <string name="text_to_be_recognize">Zu erkennender Text</string>
     <string name="detect_text">Text Erkennen</string>
+    <string name="image_detect_no_txt">Bild enthält keinen Text</string>
 
     <!-- Sights Activity. -->
     <string name="show_all_sights">Alle Sehenswürdigkeiten anzeigen</string>
