--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -50,6 +50,7 @@
     <!-- Text Recognition Activity. -->
     <string name="text_to_be_recognize">Texto a reconocer</string>
     <string name="detect_text">Detectar Texto</string>
+    <string name="image_detect_no_txt">La imagen no contiene texto</string>
 
     <!-- Sights Activity.-->
     <string name="show_all_sights">Mostrar todas las vistas</string>
