--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -38,6 +38,13 @@
     <string name="log_out_main">Επιτυχής έξοδος!</string>
     <string name="about">Σχετικά</string>
     <string name="profile">Προφίλ</string>
+    <string name="sunday">Κυριακή</string>
+    <string name="monday">Δευτέρα</string>
+    <string name="tuesday">Τρίτη</string>
+    <string name="wednesday">Τετάρτη</string>
+    <string name="thursday">Πέμπτη</string>
+    <string name="friday">Παρασκευή</string>
+    <string name="saturday">Σάββατο</string>
 
     <!-- Image Labeling Activity. -->
     <string name="image_to_recognize">Εικόνα προς αναγνώριση</string>
@@ -70,7 +77,9 @@
     <!-- Translate Activity. -->
     <string name="translate_to">Μετάφραση σε</string>
     <string name="original_text">Αρχικό κείμενο</string>
+    <string name="text_language">Γλώσσα κειμένου</string>
     <string name="translated_text">Μεταφρασμένο κείμενο</string>
+    <string name="change_language">Αλλαγή γλώσσας</string>
     <string-array name="spn_langs">
         <item></item>
         <item>Ελληνικά</item>
