--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="saturday">Saturday</string>
     <string name="sight_name">Sight name</string>
     <string name="city">City</string>
+    <string name="lang_no_support">Language not supported</string>
 
     <string-array name="spn_langs">
         <item></item>
