--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -60,8 +60,11 @@
     <string name="image_detect_no_txt">Bild enthält keinen Text</string>
 
     <!-- Sights Activity. -->
-    <string name="show_all_sights">Alle Sehenswürdigkeiten anzeigen</string>
+    <string name="view_sights_in_format">Sehen Sie sich Sehenswürdigkeiten im format an</string>
     <string name="open_map">Karte öffnen</string>
+    <string name="open_list">Liste öffnen</string>
+    <string name="map">Karte</string>
+    <string name="list">Aufführen</string>
     <string name="find_your_nearest_sight">Finden Sie Ihre nächste Sehenswürdigkeit</string>
     <string name="find">Finden</string>
     <string name="nearest_sight">Nächste Sehenswürdigkeit</string>
@@ -84,7 +87,7 @@
     <string name="text_language">Textsprache</string>
     <string name="translated_text">Übersetzter Text</string>
     <string name="change_language">Sprache ändern</string>
-    <string name="lang_no_support">Sprache wird nicht unterstützt</string>
+    <string name="lang_no_support">Die Sprache wird von der Anwendung nicht unterstützt</string>
     <string-array name="spn_langs">
         <item></item>
         <item>Griechisch</item>
@@ -99,6 +102,5 @@
     <string name="country">Land</string>
     <string name="save">Speichern</string>
     <string name="update_user_profile">Ihr Profil wurde erfolgreich aktualisiert!</string>
-
 
 </resources>
