Edit spinner in translate actv to toggle between langs.

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -88,11 +88,32 @@
     <string name="translated_text">Μεταφρασμένο κείμενο</string>
     <string name="change_language">Αλλαγή γλώσσας</string>
     <string name="lang_no_support">Η γλώσσα δεν υποστηρίζεται από την εφαρμογή</string>
-    <string-array name="spn_langs">
+    <string-array name="langs_noEn">
         <item></item>
-        <item>Ελληνικά</item>
-        <item>Γερμανικά</item>
-        <item>Ισπανικά</item>
+        <item>Greek</item>
+        <item>German</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noEl">
+        <item></item>
+        <item>English</item>
+        <item>German</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noDe">
+        <item></item>
+        <item>Greek</item>
+        <item>English</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noEs">
+        <item></item>
+        <item>Greek</item>
+        <item>English</item>
+        <item>German</item>
+    </string-array>
+    <string-array name="langs_no">
+        <item></item>
     </string-array>
 
     <!-- Profile Activity. -->
