--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -88,11 +88,32 @@
     <string name="translated_text">Texto traducido</string>
     <string name="change_language">Cambiar idioma</string>
     <string name="lang_no_support">El idioma no es compatible con la aplicación.</string>
-    <string-array name="spn_langs">
+    <string-array name="langs_noEn">
         <item></item>
-        <item>Griego</item>
-        <item>Alemán</item>
-        <item>Εspañol</item>
+        <item>Greek</item>
+        <item>German</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noEl">
+        <item></item>
+        <item>English</item>
+        <item>German</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noDe">
+        <item></item>
+        <item>Greek</item>
+        <item>English</item>
+        <item>Spanish</item>
+    </string-array>
+    <string-array name="langs_noEs">
+        <item></item>
+        <item>Greek</item>
+        <item>English</item>
+        <item>German</item>
+    </string-array>
+    <string-array name="langs_no">
+        <item></item>
     </string-array>
 
     <!-- Profile Activity. -->
