Edit UI in translate, one sight actvs, update libraries.

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -80,7 +80,7 @@
 
     <!-- One Sight Activity. -->
     <string name="sight_name">Όνομα αξιοθέατου</string>
-    <string name="city">Πόλη</string>
+    <string name="city">Πόλη/Περιοχή</string>
 
     <!-- Language Activity. -->
     <string name="select_your_language">Επέλεξε την γλώσσα σού!</string>
