--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -80,7 +80,7 @@
 
     <!-- One Sight Activity. -->
     <string name="sight_name">Sehenswürdigkeitsname</string>
-    <string name="city">Stadt</string>
+    <string name="city">Stadt/Region</string>
 
     <!-- Language Activity. -->
     <string name="select_your_language">Wähle deine Sprache!</string>
