--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -80,7 +80,7 @@
 
     <!-- One Sight Activity. -->
     <string name="sight_name">Nombre de la vista</string>
-    <string name="city">Ciudad</string>
+    <string name="city">Ciudad/Región</string>
 
     <!-- Language Activity. -->
     <string name="select_your_language">¡Elige tu idioma!</string>
