--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sight_name">Sight name</string>
-    <string name="city">City</string>
+    <string name="city">City/Region</string>
     <string name="lang_no_support">Language not supported by the application</string>
     <string name="view_sights_in_format">View sights in format</string>
     <string name="open_list">Open list</string>
