--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -81,6 +81,7 @@
     <!-- One Sight Activity. -->
     <string name="sight_name">Όνομα αξιοθέατου</string>
     <string name="city">Πόλη/Περιοχή</string>
+    <string name="loading">Φορτώνει...</string>
 
     <!-- Language Activity. -->
     <string name="select_your_language">Επέλεξε την γλώσσα σού!</string>
